@@ -5,8 +5,8 @@ package org.cryptomator.jfuse.linux.aarch64.extr;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class fcntl_h  {
 
     /* package-private */ fcntl_h() {}
