@@ -2,7 +2,11 @@
 
 package org.cryptomator.jfuse.mac.extr;
 
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class stat_h  {
 
     /* package-private */ stat_h() {}
